# fund-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
fund/: fundamental.py
fund/config/: config_manager.py  database_config.py  fred_config.py
fund/providers/: fundamental_data_provider.py
fund/repositories/: fundamental_data_repository.py
fund/services/: config_service.py  database_service.py  fundamental_data_service.py
fund/utils/: colors.py
